# Libri

./: .gitignore  .mcp.json  ARCHITETTURA.md  CLAUDE.md  DNA_CAPITOLI.txt  DNA_LIBRO.txt  GUIDA_UTENTE.md  README.md  Storia.txt  VOCABOLARIO_FRATTALE.txt  _tmp_promo_cap05.json  next.config.js  package-lock.json  package.json  tailwind.config.ts
_agenti/: README.md
_convenzioni/: README.md  agenti_foreground.md  architettura_informativa.md  git.md  marker_machine_readable.md  naming_e_versioning.md  quote_tracker.md  stato_progetto.md
_fasi/: README.md
_mcp_server/: README.md  pyproject.toml
_mcp_server/kit_orchestrator/: __init__.py  config.py  server.py
_mcp_server/kit_orchestrator/_lib/: __init__.py  script_runner.py
_scripts/: README.md  _base_pattern.py  bootstrap_graph.py  build_brief.py  build_catalog_index.py  cap06_scenes.yaml  cap06_unit.yaml  cap07_scenes.yaml  cap07_unit.yaml  cap08_scenes.yaml  cap08_unit.yaml  compile_catalog_from_graph.py  migrate_schema.py  node_cap06.json  normalize_storie.py  promote_entities_to_graph.py  queue_cap06_entities.json  queue_cap07_entities.json  queue_cap08_entities.json  split_source_to_units.py  write_node_to_graph.py
_skills/: README.md
progetto/: STATO_PROGETTO.md  _distillazione_cap01.yaml  _distillazione_cap02.yaml  _promote_queue_cap01.json  _promote_queue_cap02.json  _promote_queue_cap04.json  glossario_consegna.json  grafo_schema.json  misalignments.json  story_graph.json  story_graph.pre_cap_01.backup.json  story_graph.pre_cap_02.backup.json  story_graph.pre_cap_03.backup.json  (+6 more)
web/: .gitignore  (+4 more)
(+205 files in other folders)
