[project]
name = "kit-orchestrator"
version = "0.1.0"
description = "MCP server per il kit pipeline narrativa — espone tool per l'orchestratrice"
requires-python = ">=3.10"
authors = [
    { name = "Starter Kit" }
]
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.scripts]
kit-orchestrator = "kit_orchestrator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kit_orchestrator"]
